k8s-yaml/jupyterhub.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    cs-aalto/app: jupyterhub
  name: jupyterhub
  namespace: jupyter-test
spec:
  replicas: 1
  selector:
    matchLabels:
      cs-aalto/app: jupyterhub
  template:
    metadata:
      labels:
        cs-aalto/app: jupyterhub
      name: jupyterhub
    spec:
      hostname: jupyterhub-test-cs-aalto-fi
      containers:
      - name: jupyterhub
        image: harbor.cs.aalto.fi/jupyter-internal/jupyterhub-cs:4.1.6-2026-03-13
        command:
        - bash
        - -c
        # if keytab doesn't exist (on the first run), skip linking it. Needs
        # to be manually copied to the nfs after first connection.
        - "[ -e /mnt/keytab/krb5.keytab ] && ln -s /mnt/keytab/krb5.keytab /etc/krb5.keytab; ulimit -n 524288; /run.sh"
        ports:
        # - containerPort: 8000
        - containerPort: 8081
        - containerPort: 36541
        volumeMounts:
        - name: jupyterhub-hubdata
          mountPath: /srv/jupyterhub/
        - name: jupyterhub-config
          mountPath: /srv/jupyterhub/jupyterhub_config.py
          subPath: jupyterhub_config.py
        - name: jupyterhub-course-list
          mountPath: /courses/
        - name: chp-secret
          mountPath: /srv/jupyterhub/chp-secret.txt
          subPath: chp-secret.txt
          readOnly: true
        # - name: jupyterhub-coursedata
        #   mountPath: /coursedata/
        - name: adpw
          mountPath: /etc/adpw.txt
          subPath: adpw.txt
          readOnly: true
        - name: localusers
          mountPath: /etc/localusers.sh
          subPath: localusers.sh
          readOnly: true
        - name: hub-status-service
          mountPath: /srv/jupyterhub/hub_status_service.py
          subPath: hub_status_service.py
        - name: cull-idle-servers
          mountPath: /cull_idle_servers.py
          subPath: cull_idle_servers.py
        - name: create-ci-user
          mountPath: /create_ci_user.py
          subPath: create_ci_user.py
        - name: spawn-test
          mountPath: /srv/jupyterhub/spawn_test.py
          subPath: spawn_test.py
        - name: ssh-privkey
          mountPath: /root/.ssh/ssh_key
          subPath: ssh_key
        - name: ssh-pubkey
          mountPath: /root/.ssh/ssh_key.pub
          subPath: ssh_key.pub
        - name: knownhosts
          mountPath: /root/.ssh/known_hosts
          subPath: known_hosts
        - name: azuread-oauth
          mountPath: /etc/azuread_oauth.json
          subPath: azuread_oauth.json
        - name: sssd-conf
          mountPath: /etc/sssd/sssd.conf
          subPath: sssd.conf
        - name: nfs-keytab
          mountPath: /mnt/keytab
          # imagePullPolicy: Never
      imagePullSecrets:
      - name: registry-secret-jupyter-internal
      tolerations:
      - {key: node.kubernetes.io/disk-pressure, operator: Exists}
      - {key: node.kubernetes.io/out-of-disk, operator: Exists}
      - {key: node.kubernetes.io/memory-pressure, operator: Exists}
      volumes:
      - name: jupyterhub-hubdata
        nfs:
          server: jhnas.org.aalto.fi
          path: /vol/jupyter/jupyter-test/admin/hubdata/
      - name: nfs-keytab
        nfs:
          server: jhnas.org.aalto.fi
          path: /vol/jupyter/jupyter-test/admin/keytab/
      - name: jupyterhub-config
        configMap:
          name: jupyterhub-config
      - name: chp-secret
        secret:
          secretName: chp-secret
      - name: jupyterhub-course-list
        nfs:
          server: jhnas.org.aalto.fi
          path: /vol/jupyter/jupyter-test/course/
      # - name: jupyterhub-coursedata
      #   nfs:
      #     server: jhnas.org.aalto.fi
      #     path: /vol/jupyter/jupyter-test/course/coursedata/
      - name: adpw
        secret:
          secretName: adpw.txt
          defaultMode: 0600
      - name: localusers
        secret:
          secretName: localusers
          defaultMode: 0600
      - name: ssh-privkey
        secret:
          secretName: ssh-privkey
          defaultMode: 0600
      - name: ssh-pubkey
        secret:
          secretName: ssh-pubkey
          defaultMode: 0600
      - name: knownhosts
        secret:
          secretName: knownhosts
          defaultMode: 0600
      - name: azuread-oauth
        secret:
          secretName: azuread-oauth
          defaultMode: 0600
      - name: sssd-conf
        secret:
          secretName: sssd-conf
          defaultMode: 0600
      - name: hub-status-service
        configMap:
          name: hub-status-service
      - name: cull-idle-servers
        configMap:
          name: cull-idle-servers
      - name: create-ci-user
        configMap:
          name: create-ci-user
      - name: spawn-test
        configMap:
          name: spawn-test
      serviceAccountName: jupyter-notebook-spawner
