k8s-yaml/chp-frame.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub-chp-svc
  namespace: jupyter-jh-v4-test
spec:
  selector:
    app: configurable-http-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: chp-public
  - protocol: TCP
    port: 8001
    targetPort: 8001
    name: chp-api
