k8s-yaml/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub-ingress
  namespace: jupyter-jh-v4-test
  annotations:
    # nginx.ingress.kubernetes.io/secure-backends: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    # Uncomment this to use LE certificates
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - jh-v4.k8s-test.cs.aalto.fi
    # Change name to tls-le when using LE certificates
    secretName: tls-le
  rules:
  - host: jh-v4.k8s-test.cs.aalto.fi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyterhub-chp-svc
            port:
              number: 80
